--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,32 +4,62 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Servicios</title>
+  <title>Servicios | Mora Nails - Uñas profesionales</title>
 
-  <!-- Bootstrap opcional -->
+  <!-- SEO -->
+  <meta name="description" content="Descubrí los servicios de Mora Nails: esmaltado semipermanente, capping gel y soft gel. Calidad, cuidado y diseño personalizado para tus uñas.">
+  <meta name="keywords" content="esmaltado semipermanente, capping gel, soft gel, uñas, servicios de manicura, Mora Nails, Camila Alderete">
+  <meta name="author" content="Camila Alderete">
+
+  <!-- Redes sociales -->
+  <meta property="og:title" content="Servicios | Mora Nails">
+  <meta property="og:description" content="Conocé nuestras técnicas: semipermanente, capping y soft gel.">
+  <meta property="og:image" content="https://www.instagram.com/__mora.nails?igsh=b2lid2xxZjZubHlo">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://tudominio.com/pages/servicios.html">
+
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Estilos personalizados -->
+  <!-- Estilos -->
   <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
 
-  <header class="text-center py-3 bg-light">
-    <nav>
-      <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link text-dark" href="../index.html">Inicio</a>
-        </li>
-      </ul>
-    </nav>
+  <header class="text-center py-4">
+  <a href="../index.html" class="logo-inicio">
+    <img src="../img/logo.png" alt="Logo Mora Nails" />
+  </a>
+ <nav class="navbar navbar-expand-lg navbar-dark mt-3" style="background-color: #d7b2d8">
+    <div class="container-fluid justify-content-center">
+      <a class="navbar-brand d-lg-none" href="#">Menú</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="servicios.html">Servicios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   </header>
 
   <main class="container my-5">
-  <h3 class="text-center text-pink mb-4 animar-servicio">Nuestros Servicios</h3>
+  <h3 class="text-center text-pink mb-4 animar-servicio";">Nuestros Servicios</h3>
 
   <section class="mb-5 animar-servicio animar-delay-1">
-    <h4 class="text-decoration-underline text-primary">Esmaltado Semipermanente</h4>
+    <h4 class="text-decoration-underline texto-servicio";">Esmaltado Semipermanente</h4>
     <p>
       El esmaltado semipermanente es una técnica de manicura que combina la duración del gel con la facilidad de aplicación del esmalte tradicional.
       Se aplica en capas y se seca con lámpara LED o UV, lo que permite un acabado brillante, resistente y de larga duración —generalmente entre 2 y 3 semanas sin descascararse.
@@ -38,7 +68,7 @@
   </section>
 
   <section class="mb-5 animar-servicio animar-delay-2">
-    <h4 class="text-decoration-underline text-success">Capping Gel</h4>
+    <h4 class="text-decoration-underline texto-servicio">Capping Gel</h4>
     <p>
       El capping gel es una técnica de refuerzo que se aplica sobre la uña natural utilizando gel, sin necesidad de alargarla.
       Su objetivo principal es fortalecer la uña, protegerla de quiebres y brindar una base sólida para el esmaltado.
@@ -48,7 +78,7 @@
   </section>
 
   <section class="animar-servicio animar-delay-3">
-    <h4 class="text-decoration-underline text-danger">Soft Gel</h4>
+    <h4 class="text-decoration-underline texto-servicio">Soft Gel</h4>
     <p>
       El soft gel es una técnica moderna de extensión de uñas que utiliza cápsulas preformadas de gel suave, las cuales se adhieren a la uña natural con gel constructor y se curan con lámpara LED o UV.
       A diferencia de otras extensiones, el soft gel es más liviano, flexible y menos agresivo para la uña, ofreciendo un acabado fino, natural y duradero.
@@ -56,6 +86,12 @@
     </p>
   </section>
 </main>
+
+<footer>
+  <p>&copy; 2025 Camila Alderete. Todos los derechos reservados.</p>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
