--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,26 +4,56 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contacto</title>
+  <title>Contacto | Mora Nails - Turnos y Consultas</title>
 
-  <!-- Bootstrap opcional -->
+   <!-- SEO -->
+  <meta name="description" content="¿Querés pedir un turno, hacer una consulta o visitarnos? Contactate con Mora Nails por WhatsApp, Instagram o completando el formulario.">
+  <meta name="keywords" content="contacto Mora Nails, turno uñas, consultas manicura, formulario contacto, Camila Alderete, Mora Nails">
+  <meta name="author" content="Camila Alderete">
+
+   <!-- Redes sociales -->
+  <meta property="og:title" content="Contacto | Mora Nails">
+  <meta property="og:description" content="Escribinos para turnos o consultas. Te esperamos con los mejores diseños de uñas.">
+  <meta property="og:image" content="https://www.instagram.com/__mora.nails?igsh=b2lid2xxZjZubHlo">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://tudominio.com/pages/contacto.html">
+ 
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Estilos propios -->
+  <!-- Estilos  -->
   <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
 
-  <header class="text-center py-3 bg-light">
-    <nav>
-      <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link text-dark" href="../index.html">Inicio</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+  <header class="text-center py-4">
+  <a href="../index.html" class="logo-inicio">
+    <img src="../img/logo.png" alt="Logo Mora Nails" />
+  </a>
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #d7b2d8">
+    <div class="container-fluid justify-content-center">
+      <a class="navbar-brand d-lg-none" href="#">Menú</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="servicios.html">Servicios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
 
   <main class="container my-5">
     <h1 class="text-center text-pink mb-4">Contacto</h1>
@@ -37,12 +67,39 @@
 
     <section class="text-center mb-5">
       <h2 class="text-pink">Nuestras redes</h2>
-      <p>Podés encontrarnos en nuestras redes sociales como <strong>@moranails</strong>.</p>
+      <p>Podés encontrarnos en nuestras redes sociales como <strong>@__mora.nails</strong>.</p>
       <p>Seguinos en <strong>Instagram, Facebook y TikTok</strong> para ver nuestros trabajos, promociones exclusivas y tips de cuidado de uñas.</p>
       <p>¡Te esperamos para que seas parte de nuestra comunidad! 💅</p>
     </section>
 
+     <section class="mb-5">
+      <h2 class="text-pink text-center mb-4">Enviános un mensaje</h2>
+      <form action="tu-script-de-envio.php" method="POST" class="mx-auto" style="max-width: 600px;">
+        <div class="mb-3">
+          <label for="nombre" class="form-label">Nombre</label>
+          <input type="text" class="form-control" id="nombre" name="nombre" required placeholder="Tu nombre" />
+        </div>
+        <div class="mb-3">
+          <label for="email" class="form-label">Correo electrónico</label>
+          <input type="email" class="form-control" id="email" name="email" required placeholder="tu@email.com" />
+        </div>
+        <div class="mb-3">
+          <label for="mensaje" class="form-label">Mensaje</label>
+          <textarea class="form-control" id="mensaje" name="mensaje" rows="4" required placeholder="Escribí tu mensaje aquí..."></textarea>
+        </div>
+        <div class="text-center">
+          <button type="submit" class="btn btn-pink px-5">Enviar</button>
+        </div>
+      </form>
+    </section>
+
   </main>
+
+<footer>
+  <p>&copy; 2025 Camila Alderete. Todos los derechos reservados.</p>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
