--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <header class="text-center py-4">
   <a href="index.html" class="logo-inicio">
-  <img src="img/logo.png" alt="Logo Mora Nails" />
+    <img src="img/logo.png" alt="Logo Mora Nails" class="logo-navbar">
 </a>
   <h2>¡Bienvenidos a mi espacio de belleza!</h2>
 
@@ -75,6 +75,7 @@
 </div>
 
   <div class="textos animar">
+  <div class="recuadro-info">
     <h2>Mi nombre es Camila</h2>
     <p>
       Soy manicura profesional. Desde hace tres años me dedico con pasión al cuidado y embellecimiento de las manos, 
@@ -103,15 +104,25 @@
       ¡Gracias por confiar en nuestro trabajo!
     </p>
   </div>
+</div>
+
 </main>
 
 <div class="text-center mt-5">
-  <a href="pages/contacto.html" class="btn btn-pink px-5 py-2">Reservar turno</a>
+ <a href="pages/contacto.html" class="btn btn-pink btn-lg px-5 py-2 mt-3">Reservar turno</a>
 </div>
 
-<footer>
-  <p>&copy; 2025 Camila Alderete. Todos los derechos reservados.</p>
-</footer>
+  <footer class="footer">
+    <p>&copy; 2025 Mora Nails. Todos los derechos reservados.</p>
+    <div class="social-icons mt-3">
+      <a href="https://www.instagram.com" target="_blank" rel="noopener">
+        <img src="../Mora Nails - Espacio de belleza/img/instagram.png" alt="Instagram" class="social-icon">
+      </a>
+      <a href="https://wa.me/549XXXXXXXX" target="_blank" rel="noopener">
+        <img src="../Mora Nails - Espacio de belleza/img/whatsapp.png" alt="WhatsApp" class="social-icon">
+      </a>
+    </div>
+  </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 
