--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,9 +28,10 @@
 <body>
 
   <header class="text-center py-4">
-  <a href="../index.html" class="logo-inicio">
-    <img src="../img/logo.png" alt="Logo Mora Nails" />
-  </a>
+  <a href="index.html" class="logo-inicio">
+    <img src="../img/logo.png" alt="Logo Mora Nails" class="logo-navbar">
+</a>
+
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #d7b2d8">
     <div class="container-fluid justify-content-center">
       <a class="navbar-brand d-lg-none" href="#">Menú</a>
@@ -56,7 +57,7 @@
 </header>
 
   <main class="container my-5">
-    <h1 class="text-center text-pink mb-4">Contacto</h1>
+    <h1 class="text-center text-pink mb-4">Contacto:</h1>
 
     <section class="text-center mb-5">
       <p>Si tenés alguna duda, querés pedir un turno o simplemente consultarnos, ¡estamos para ayudarte!</p>
@@ -65,15 +66,24 @@
       <p class="fw-bold">¡Nos encanta conectar con vos!</p>
     </section>
 
-    <section class="text-center mb-5">
-      <h2 class="text-pink">Nuestras redes</h2>
-      <p>Podés encontrarnos en nuestras redes sociales como <strong>@__mora.nails</strong>.</p>
-      <p>Seguinos en <strong>Instagram, Facebook y TikTok</strong> para ver nuestros trabajos, promociones exclusivas y tips de cuidado de uñas.</p>
-      <p>¡Te esperamos para que seas parte de nuestra comunidad! 💅</p>
-    </section>
-
+    <h2 class="text-pink mb-3">Seguinos en redes:</h2>
+    <div class="d-flex justify-content-center gap-4 align-items-center flex-wrap">
+      <a href="https://instagram.com/__mora.nails" target="_blank">
+        <img src="../img/instagram.png" alt="Instagram Mora Nails" width="40">
+      </a>
+      
+      <a href="https://facebook.com" target="_blank">
+        <img src="../img/facebook.png" alt="Facebook Mora Nails" width="40">
+      </a>
+      
+      <a href="https://tiktok.com" target="_blank">
+        <img src="../img/tiktok.png" alt="TikTok Mora Nails" width="40">
+      </a>
+   </div>
+   
+   <p class="mt-3">¡Descubrí promociones exclusivas, diseños únicos y consejos para cuidar tus uñas!</p>
      <section class="mb-5">
-      <h2 class="text-pink text-center mb-4">Enviános un mensaje</h2>
+      <h2 class="text-pink text-center mb-4">Enviános un mensaje:</h2>
       <form action="tu-script-de-envio.php" method="POST" class="mx-auto" style="max-width: 600px;">
         <div class="mb-3">
           <label for="nombre" class="form-label">Nombre</label>
@@ -95,9 +105,17 @@
 
   </main>
 
-<footer>
-  <p>&copy; 2025 Camila Alderete. Todos los derechos reservados.</p>
-</footer>
+  <footer class="footer">
+    <p>&copy; 2025 Mora Nails. Todos los derechos reservados.</p>
+    <div class="social-icons mt-3">
+      <a href="https://www.instagram.com" target="_blank" rel="noopener">
+        <img src="../img/instagram.png" alt="Instagram" class="social-icon">
+      </a>
+      <a href="https://wa.me/549XXXXXXXX" target="_blank" rel="noopener">
+        <img src="../img/whatsapp.png" alt="WhatsApp" class="social-icon">
+      </a>
+    </div>
+  </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 
