--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -28,9 +28,10 @@
 <body>
 
   <header class="text-center py-4">
-  <a href="../index.html" class="logo-inicio">
-    <img src="../img/logo.png" alt="Logo Mora Nails" />
-  </a>
+  <a href="index.html" class="logo-inicio">
+    <img src="../img/logo.png" alt="Logo Mora Nails" class="logo-navbar">
+</a>
+
  <nav class="navbar navbar-expand-lg navbar-dark mt-3" style="background-color: #d7b2d8">
     <div class="container-fluid justify-content-center">
       <a class="navbar-brand d-lg-none" href="#">Menú</a>
@@ -56,40 +57,58 @@
   </header>
 
   <main class="container my-5">
-  <h3 class="text-center text-pink mb-4 animar-servicio";">Nuestros Servicios</h3>
+  <h3 class="text-center text-pink mb-5">Nuestros Servicios:</h3>
 
-  <section class="mb-5 animar-servicio animar-delay-1">
-    <h4 class="text-decoration-underline texto-servicio";">Esmaltado Semipermanente</h4>
-    <p>
-      El esmaltado semipermanente es una técnica de manicura que combina la duración del gel con la facilidad de aplicación del esmalte tradicional.
-      Se aplica en capas y se seca con lámpara LED o UV, lo que permite un acabado brillante, resistente y de larga duración —generalmente entre 2 y 3 semanas sin descascararse.
-      Es ideal para quienes buscan uñas prolijas, firmes y con color intenso por más tiempo.
-    </p>
-  </section>
+  <!-- SEMIPERMANENTE -->
+  <div class="servicio-box">
+    <img src="../img/semipermanente.png" alt="Esmaltado Semipermanente">
+    <div class="contenido">
+      <h4 class="text-decoration-underline texto-servicio">Esmaltado Semipermanente</h4>
+      <p>
+        El esmaltado semipermanente combina la duración del gel con la facilidad del esmalte tradicional.
+        Se aplica en capas y se seca con lámpara LED o UV, logrando un acabado brillante y resistente por 2 a 3 semanas.
+        Ideal para quienes buscan uñas prolijas, firmes y con color duradero.
+      </p>
+    </div>
+  </div>
 
-  <section class="mb-5 animar-servicio animar-delay-2">
-    <h4 class="text-decoration-underline texto-servicio">Capping Gel</h4>
-    <p>
-      El capping gel es una técnica de refuerzo que se aplica sobre la uña natural utilizando gel, sin necesidad de alargarla.
-      Su objetivo principal es fortalecer la uña, protegerla de quiebres y brindar una base sólida para el esmaltado.
-      Es ideal para personas con uñas débiles o quebradizas, ya que ofrece mayor durabilidad y un acabado prolijo y natural.
-      Además, puede combinarse con esmalte semipermanente para un resultado más completo y duradero.
-    </p>
-  </section>
+  <!-- CAPPING -->
+  <div class="servicio-box">
+    <img src="../img/capping.jpg" alt="Capping Gel">
+    <div class="contenido">
+      <h4 class="text-decoration-underline texto-servicio">Capping Gel</h4>
+      <p>
+        Técnica de refuerzo con gel sobre la uña natural, sin alargarla. Fortalece, protege y brinda una base sólida.
+        Perfecta para uñas débiles o quebradizas. Puede combinarse con esmalte semipermanente.
+      </p>
+    </div>
+  </div>
 
-  <section class="animar-servicio animar-delay-3">
-    <h4 class="text-decoration-underline texto-servicio">Soft Gel</h4>
-    <p>
-      El soft gel es una técnica moderna de extensión de uñas que utiliza cápsulas preformadas de gel suave, las cuales se adhieren a la uña natural con gel constructor y se curan con lámpara LED o UV.
-      A diferencia de otras extensiones, el soft gel es más liviano, flexible y menos agresivo para la uña, ofreciendo un acabado fino, natural y duradero.
-      Es ideal para quienes desean alargar sus uñas de forma rápida, sin limado excesivo ni uso de moldes, y con resultados profesionales en menos tiempo.
-    </p>
-  </section>
+  <!-- SOFT GEL -->
+  <div class="servicio-box">
+    <img src="../img/softgel.png" alt="Soft Gel">
+    <div class="contenido">
+      <h4 class="text-decoration-underline texto-servicio">Soft Gel</h4>
+      <p>
+        Técnica de extensión con cápsulas preformadas de gel suave adheridas a la uña con gel constructor.
+        Es liviano, flexible y menos agresivo. Brinda un acabado natural y profesional en menos tiempo.
+      </p>
+    </div>
+  </div>
 </main>
 
-<footer>
-  <p>&copy; 2025 Camila Alderete. Todos los derechos reservados.</p>
-</footer>
+
+  <footer class="footer">
+    <p>&copy; 2025 Mora Nails. Todos los derechos reservados.</p>
+    <div class="social-icons mt-3">
+      <a href="https://www.instagram.com" target="_blank" rel="noopener">
+        <img src="../img/instagram.png" alt="Instagram" class="social-icon">
+      </a>
+      <a href="https://wa.me/549XXXXXXXX" target="_blank" rel="noopener">
+        <img src="../img/whatsapp.png" alt="WhatsApp" class="social-icon">
+      </a>
+    </div>
+  </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 
