--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
     <p>&copy; 2025 Mora Nails. Todos los derechos reservados.</p>
     <div class="social-icons mt-3">
       <a href="https://www.instagram.com" target="_blank" rel="noopener">
-        <img src="../Mora Nails - Espacio de belleza/img/instagram.png" alt="Instagram" class="social-icon">
+        <img src="img/instagram.png" alt="Instagram" class="social-icon">
       </a>
       <a href="https://wa.me/549XXXXXXXX" target="_blank" rel="noopener">
-        <img src="../Mora Nails - Espacio de belleza/img/whatsapp.png" alt="WhatsApp" class="social-icon">
+        <img src="img/whatsapp.png" alt="WhatsApp" class="social-icon">
       </a>
     </div>
   </footer>
