--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <meta name="author" content="Camila Alderete">
 
   <!-- para redes sociales -->
-  <meta property="og:title" content="Mora Nails - Uñas hermosas en manos felices 💅">
+  <meta property="og:title" content="Mora Nails - Uñas hermosas en manos felices">
   <meta property="og:description" content="Servicios profesionales de uñas: semipermanente, capping y soft gel.">
-  <meta property="og:image" content="https://tudominio.com/img/logo.png"> <!-- Cambiá a tu ruta real -->
+  <meta property="og:image" content="https://tudominio.com/img/logo.png">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://tudominio.com">
 
