--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -111,7 +111,7 @@
       <a href="https://www.instagram.com" target="_blank" rel="noopener">
         <img src="../img/instagram.png" alt="Instagram" class="social-icon">
       </a>
-      <a href="https://wa.me/549XXXXXXXX" target="_blank" rel="noopener">
+      <a href="https://wa.me/543492304622" target="_blank" rel="noopener">
         <img src="../img/whatsapp.png" alt="WhatsApp" class="social-icon">
       </a>
     </div>
